WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315219
Fix css/css-values/html-attr-case-insensitivity.html
https://bugs.webkit.org/show_bug.cgi?id=315219
Summary
Fix css/css-values/html-attr-case-insensitivity.html
Antti Koivisto
Reported
2026-05-20 11:59:34 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-20 11:59:47 PDT
<
rdar://problem/177547701
>
Antti Koivisto
Comment 2
2026-05-20 12:03:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65313
EWS
Comment 3
2026-05-21 01:54:17 PDT
Committed
313654@main
(4e12206ac706): <
https://commits.webkit.org/313654@main
> Reviewed commits have been landed. Closing PR #65313 and removing active labels.
Antti Koivisto
Comment 4
2026-05-22 00:46:57 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/60103
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug