Fix css/css-values/html-attr-case-insensitivity.html https://bugs.webkit.org/show_bug.cgi?id=315219 rdar://177547701

Reviewed by Anne van Kesteren.

ASCII-lowercase the attr() name only for HTML elements in HTML documents,
to match how HTML attributes are stored. Foreign content (SVG, MathML)
inside an HTML document remains case-sensitive. Without this, attr() on
an HTML element fails to find a mixed-case attribute name in the rule.

Adds a SVG-side WPT to verify case-sensitivity is preserved for
non-HTML elements.

Spec: https://drafts.csswg.org/css-values-5/#typedef-attr-name

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/resources/resource-files.json:
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/svg-attr-case-sensitivity-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/svg-attr-case-sensitivity-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-values/svg-attr-case-sensitivity.html: Added.
* Source/WebCore/style/StyleSubstitutionResolver.cpp:
(WebCore::Style::SubstitutionResolver::substituteAttrFunction):

Canonical link: https://commits.webkit.org/313654@main